--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+h1, h2, h3 {
+    text-transform: uppercase;
+}
+
 html{
     background-color: #fff;
     color: #555;
@@ -121,4 +125,30 @@ color: #fff;
 .btn-ghost{
     color: orangered;
     transition: background-color 0.3s, border-color 0.3s;
+}
+
+.section-features{
+    text-align: center;
+    margin: 20px 10%;
+}
+.section-features-h2{
+    font-size: 3rem;
+
+    margin-bottom: 50px;
+}
+
+.section-features h2::after{
+    display: block;
+    content: "         ";
+    width: 100px;
+    height: 5px;
+    background-color: orangered;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    
+}
+.section-features-p .long-copy{
+    font-size: 1.5rem;
+    line-height: 2.5rem;
 }
