--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -35,7 +35,7 @@ header nav{
 header .logo{
     width: 75px;
     margin-left: 30px;
-    border: solid 8px black;
+    border: solid 4px orangered;
     border-radius: 40px;
 }
 
@@ -104,8 +104,8 @@ header a{
 .btn-full{
     color: #fff;
     background-color: orangered;
-
     transition: background-color 0.3s, border-color 0.3s;
+
 }
 
 .btn-full:hover,
@@ -125,6 +125,7 @@ color: #fff;
 .btn-ghost{
     color: orangered;
     transition: background-color 0.3s, border-color 0.3s;
+
 }
 
 .section-features{
@@ -190,3 +191,7 @@ color: #fff;
     transform: scale(1.0);
     opacity: 1;
 }
+
+
+
+
