--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,14 +12,14 @@ h1, h2, h3 {
 html{
     background-color: #fff;
     color: #555;
-    font-family: 'Lato', 'Arial', sans-serif;
+    font-family: 'Poppins', 'Arial', sans-serif;
     font-weight: 300;
     text-rendering: optimize;
 }
 
 header{
     height: 100vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)), url(img/fundo.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 1)), url(img/fundo.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -48,9 +48,7 @@ header .main-nav{
 list-style: none;
 display: flex;
 justify-content: space-around;
-
 flex-grow: 2;
-
 margin-left: 30%;
 }
 
@@ -64,21 +62,24 @@ header .main-nav li{
     padding-bottom: 5px;
     padding-right: 5px;
     border-bottom: solid 4px transparent;
-    border-right:  solid 4px transparent;
-
     transition: border-bottom 0.3s, border-right 0.3s;
 }
 
 header .main-nav li:hover{
     border-bottom: solid 4px orangered;
-    border-right:  solid 4px orangered;
 }
 
 .hero-text-box{
     position: absolute;
-    top: 50%;
-    left: 4%;
+    top: 40%;
+    left: 5%;
+    right: 5%;
 }
+
+.hero-text-box a{
+    float: right;
+}
+
 
 header h1{
     margin: 0;
@@ -87,11 +88,21 @@ header h1{
     word-spacing: 7px;
     letter-spacing: 1px;
     text-transform: uppercase;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
 }
 
 header a{
     text-decoration: none;
+}
+
+header p{
+    margin: 0;
+    color: #fff;
+    font-weight: 400;
+    word-spacing: 5px;
+    letter-spacing: 1px;
+    text-transform: capitalize;
+    margin-bottom: 25px;
 }
 
 .btn:link, .btn:visited{
@@ -112,19 +123,6 @@ header a{
 .btn-full:active{
 background-color: rgb(137, 39, 3);
 border-color: rgb(137, 39, 3);
-
-}
-
-.btn-ghost:hover,
-.btn-ghost:active{
-background-color: rgb(137, 39, 3);
-border-color: rgb(137, 39, 3);
-color: #fff;
-}
-
-.btn-ghost{
-    color: orangered;
-    transition: background-color 0.3s, border-color 0.3s;
 
 }
 
@@ -159,39 +157,169 @@ color: #fff;
     font-size: 3rem;
     color: orangered;
     border-bottom: 7px;
+    transition: 1s;
 }
 
-.image-showcase{
-    width: 100%;
-    list-style: none;
+.section-features ion-icon:hover{
+    color: rgb(188, 50, 0);
+    cursor: pointer;
+
 }
 
-.image-showcase li{
-    display: flex;
-    width: 25%;
+.carousel {
+    margin: auto;
     overflow: hidden;
-    float: left;
+    margin-top: 400px;
+    margin-bottom: 40px;
+    width: 850px;
+    height: 425px;
+
 }
 
-.image-showcase .foto{
+.slides {
     width: 100%;
-    background-color: black;
+    height: 100%;
+    display: flex;
 }
 
-.foto img{
-    width: 100%;
-    height: auto;
-    opacity: 0.8;
-    transform:scale(1.2) ;
-
-    transition: transform 0.5s, opacity 0.5s;
+.slides div {
+    flex: 0 0 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 0.5s;
 }
 
-.foto img:hover{
-    transform: scale(1.0);
+.slides div:target {
     opacity: 1;
 }
 
+.slides div.active {
+    opacity: 1;
+}
 
+.slides div:nth-child(1) {
+    background-image: url('img/frtete.jpg');
+    background-size: cover;
+}
 
+.slides div:nth-child(2) {
+    background-image: url('img/cashback.jpg');
+    background-size: cover;
+}
+
+.slides div:nth-child(3) {
+    background-image: url('img/promos.jpg');
+    background-size: cover;
+}
+
+.manual-navigation {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    width: 850px;
+    margin-top: -30px;
+}
+
+.manual-btn {
+    border: 1.5px solid #f5f5f5;
+    padding: 5px;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: 1.3s;
+}
+
+.manual-btn:not(:last-child) {
+    margin-right: 40px;
+}
+
+.manual-btn:hover {
+    background-color: #f5f5f5;
+}
+
+.manual-btn:target {
+    background-color: #f5f5f5;
+}
+
+.manual-btn::after {
+    content: "";
+    display: block;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: #f5f5f5;
+    transition: background-color 0.3s;
+}
+
+.manual-btn:not(:last-child)::after {
+    margin-top: 4px;
+}
+
+.manual-btn:target::after {
+    background-color: #555;
+}
+
+.slides div:nth-child(1),
+.slides div:nth-child(2),
+.slides div:nth-child(3) {
+    background-position: center;
+    background-size: contain;
+}
+
+footer {
+    background-color: rgba(0, 0, 0, 0.89);
+    padding: 20px;
+  }
+  
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  
+  .footer-container h3 {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  .footer-left,
+  .footer-middle,
+  .footer-right {
+    flex-basis: 30%;
+    margin-bottom: 20px;
+  }
+  
+  .footer-left p,
+  .footer-middle p,
+  .footer-right p {
+    margin: 5px 0;
+    color: #f7f7f7;
+  }
+  .footer-left h3,
+  .footer-middle h3,
+  .footer-right h3 {
+    color: #f7f7f7;
+  }
+  
+  .social-icons {
+    display: flex;
+    justify-content:space-evenly;
+    color: #f7f7f7;
+  }
+  
+  .footer-bottom {
+    margin-top: 20px;
+    text-align: center;
+    font-size: 14px;
+    color: #f5f5f5;
+  }
+  
+  .footer-bottom a {
+    color: #f7f7f7;
+    text-decoration: none;
+  }
+  
+  .footer-bottom a:hover {
+    text-decoration: underline;
+  }
 
